# game-engine

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  game_engine_application.hpp  json.hpp  object.hpp  render_layer.hpp  shader.hpp
src/: camera.cpp  game_engine_application.cpp  json.cpp  json_internal.cpp  object.cpp  render_layer.cpp  shader.cpp
test/: leveldat.json  test_app.cpp
test/shaders/: frag.frag  vert.vert
